Complete dashboard audit activity and user APIs